src/objects/Microgen_Contracts__c.object
<CustomObject>
    <description>Reporting object for Microgen requirements
This object is accessible via the API, and refreshes daily from its source Access table</description>
    <fields>
        <fullName>APP_Currency_Code__c</fullName>
        <label>APP_Currency_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctBillingCountryCode_microgen__c</fullName>
        <label>AcctBillingCountryCode_microgen</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctBillingCountry__c</fullName>
        <label>AcctBillingCountry</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctOwner__c</fullName>
        <label>AcctOwner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <label>ApplicationName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Category__c</fullName>
        <label>Application_Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <label>Application_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application_Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTRACT_PMT_TERMS__c</fullName>
        <label>CONTRACT_PMT_TERMS</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Currency_Code__c</fullName>
        <label>Contract_Currency_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <label>Contract_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract_Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_status__c</fullName>
        <label>Contract_status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_type__c</fullName>
        <label>Contract_type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EARLIEST_DEVICE_SA_DATE__c</fullName>
        <label>EARLIEST_DEVICE_SA_DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EARLIEST_SA_DATE_DEVICE_C_Name__c</fullName>
        <label>EARLIEST_SA_DATE_DEVICE__C_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_ACCOUNT__c</fullName>
        <label>Last_Modified_ACCOUNT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_APPLICATION__c</fullName>
        <label>Last_Modified_APPLICATION</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_CONTRACTAPPLICATION__c</fullName>
        <label>Last_Modified_CONTRACTAPPLICATION</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_CONTRACT__c</fullName>
        <label>Last_Modified_CONTRACT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_PLATFORMAPPLICATION__c</fullName>
        <label>Last_Modified_PLATFORMAPPLICATION</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_PLATFORM__c</fullName>
        <label>Last_Modified_PLATFORM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legally_shippable__c</fullName>
        <label>Legally_shippable</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Motorola_entity__c</fullName>
        <label>Motorola_entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlatformAppname__c</fullName>
        <label>PlatformAppname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlatformName__c</fullName>
        <label>PlatformName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_code__c</fullName>
        <label>Reason_code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_code_last_modified__c</fullName>
        <label>Reason_code_last_modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rev_Share_App_microgen__c</fullName>
        <label>Rev_Share_App_Microgen</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev_Share_Details__c</fullName>
        <label>Rev_Share_Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Withholding__c</fullName>
        <label>Tax_Withholding</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_W8BEN_microgen__c</fullName>
        <label>Valid_W8BEN_microgen</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eGVM_Number__c</fullName>
        <label>eGVM_Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rev_share_contract_microgen__c</fullName>
        <label>rev_share_contract_microgen</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Microgen_Contracts</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AccountName__c</columns>
        <columns>eGVM_Number__c</columns>
        <columns>Contract_Number__c</columns>
        <columns>Reason_code_last_modified__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Contract_Name__c</columns>
        <columns>Reason_code__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Number__c</field>
            <operation>equals</operation>
            <value>16398</value>
        </filters>
        <filters>
            <field>Application_ID__c</field>
            <operation>equals</operation>
            <value>82SF00080652</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Microgen_Contracts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Microgen_Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>